Making customUserService for authentication with Database